syntax = "proto3";

import "common/location.proto";

message BaqmeLocation {
  string bike_id = 1;
  int32 is_reserved = 2;
  int32 is_disabled = 3;
  string vehicle_type_id = 4;
  string rental_uris = 5;
  common.Location location = 6;
}
